--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ const toolsData = {
 "Grok":"https://grok.x.ai",
 "Perplexity":"https://www.perplexity.ai",
 "MS Copilot":"https://copilot.microsoft.com",
-"Deepseek":"https://chat.deepseek.com/sign_in" /* Added Deepseek */
+"Deepseek":"https://www.deepseek.com/" /* Added Deepseek */
 },
 
 "Presentations":{
